Minor tidies to tests